<resources>
    <string name="appName">AyRide</string>
    <string name="facebookAppId">515347915316889</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="facebookLoginText">CONNECT WITH FACEBOOK</string>
    <string name="facebookLogoutText">LOG OUT</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="next">NEXT</string>
    <string name="birthday">Birthday</string>
    <string name="createAccount">Create Account</string>
    <string-array name="genderArray">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string name="loginActivityTitle">LoginActivity</string>
    <string name="mapsActivityTitle">Map</string>
    <string name="searchRide">SEARCH RIDE</string>
    <string name="settingsActivityTitle">Settings</string>
    <string name="personalInfo">Personal Info</string>
    <string name="passwordProcesses">Password Stuff</string>
    <string name="vehicleInfo">Vehicle Information</string>
    <string name="addVehicleInfo">ADD VEHICLE</string>
    <string name="close">CLOSE</string>
    <string name="vehicleLicensePlateHint">Vehicle License Plate</string>
    <string name="vehicleYearHint">Vehicle Year</string>
    <string name="vehicleModelHint">Vehicle Model</string>
    <string name="vehicleColorHint">Vehicle Color</string>
    <string name="driverChat">CHAT ROOM</string>
    <string name="driverCreateRide">CREATE RIDE</string>
    <string name="appointmentTime">Appointment Time</string>
    <string name="fromLabel">FROM:</string>
    <string name="toLabel">TO:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="commentForRide">Comment For Ride</string>
    <string name="azureApiKey">GrNjSZlXnMAQjEblFKkvodLnSJyQHs15</string>
    <string name="azureApiUrl">https://ayride-backend.azure-mobile.net/</string>
    <string name="gcmProjectNumber">1072435786165</string>
    <string name="gcmServerApi">AIzaSyD58RSGPu5NBUL4O6Qy3SZH-dyUjcGAdyk</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="gcmSenderId">1072435786165</string>
    <string name="firebaseUrl">https://ayride.firebaseio.com/users/</string>
    <string name="firebaseCoordinates">https://ayride.firebaseio.com/coordinates/</string>
    <string name="firebaseUsersChat">https://ayride.firebaseio.com/chat/userschat/</string>
    <string name="firebaseDriversChat">https://ayride.firebaseio.com/chat/driverschat/</string>
    <string name="firebaseP2PChat">https://ayride.firebaseio.com/chat/peertopeer/</string>
    <string name="addHashTag">ADD HASHTAG</string>
    <string name="hashTagHint">Hashtag</string>
    <string name="tokenErrorMessage">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="gcmSendMessage">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
</resources>
