<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/personalInfo">
        <EditTextPreference
            android:key="driverName"
            android:title="NAME"></EditTextPreference>
        <EditTextPreference
            android:key="driverSurname"
            android:title="SURNAME"></EditTextPreference>
        <EditTextPreference
            android:key="driverEmail"
            android:title="E_MAIL"></EditTextPreference>
        <EditTextPreference
            android:key="driverBirthday"
            android:title="BIRTHDAY"
            android:inputType="date"
            android:ems="10"></EditTextPreference>
        <EditTextPreference
            android:key="driverGender"
            android:title="GENDER"></EditTextPreference>
        <EditTextPreference
            android:key="driverUserPhone"
            android:title="PHONE NUMBER"
            android:inputType="phone"
            android:maxLength="@integer/normalFormatPhoneNumberMaxLength"></EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/vehicleInfo">
        <EditTextPreference
            android:key="vehicleModel"
            android:title="VEHICLE MODEL"></EditTextPreference>
        <EditTextPreference
            android:key="vehicleColor"
            android:title="VEHICLE COLOR"></EditTextPreference>
        <EditTextPreference
            android:key="vehicleLicensePlate"
            android:title="LICENSE PLATE"></EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/passwordProcesses">
        <CheckBoxPreference
            android:checked="false"
            android:key="driverPassword"
            android:summary=""
            android:title="PASSWORD"></CheckBoxPreference>
        <EditTextPreference
            android:key="driverNewPassword"
            android:summary=""
            android:title="Change your password"></EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>